# ratings

./: .pre-commit-config.yaml  LICENSE  Makefile  README.md
data-service/: .env.example  Dockerfile  accommodations.json  alembic.ini  docker-compose.yml  pyproject.toml
data-service/src/: main.py  upload.py
data-service/src/api/v1/: routers.py
data-service/src/api/v1/endpoints/: __init__.py  accommodation.py  filters.py
data-service/src/core/: config.py  db.py  exceptions.py
data-service/src/models/: __init__.py  accommodation.py  base.py  review.py  user.py
data-service/src/models/migrations/: env.py
data-service/src/models/migrations/versions/: 01-2024_09_20_1723-.py
data-service/src/repositories/: abstract.py  accommodation.py  base.py  review.py  user.py
data-service/src/schemas/: accommodation.py  review.py  user.py
data-service/src/services/: accommodation.py  import_data.py  review.py
data-service/src/utils/: validators.py
scoring-service/: .dockerignore  .env.example  Dockerfile  docker-compose.yaml  docker-compose.yml  pyproject.toml
scoring-service/src/: main.py
scoring-service/src/api/v1/: routers.py
scoring-service/src/api/v1/endpoints/: scoring.py
scoring-service/src/core/: client.py  config.py
scoring-service/src/schemas/: scoring.py
scoring-service/src/services/: cache.py  scoring.py
scoring-service/tests/: conftest.py  test_scoring.py
